--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -14,6 +14,7 @@
         パスワード：
         <input id="password" name="password" type="password">
     </label>
+    {{ .csrfField }}
     <button>登録</button>
 </form>
 </body>
